refactor resource requirements utils and add tests