@@ -12,11 +12,11 @@ import io.airbyte.config.JobTypeResourceLimit.JobType;
 import io.airbyte.config.ResourceRequirements;
 import io.airbyte.config.StandardSyncInput;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import javax.annotation.Nullable;
 
 public class ResourceRequirementsUtils {
 
@@ -26,16 +26,20 @@ public class ResourceRequirementsUtils {
    *
    * @param input - sync input
    * @param actorType - type of actor to extract resource requirements for
-   * @param jobType - toe of job to extract resource requirements for
-   * @return resource requirements, if present, otherwise null.
+   * @param jobType - type of job to extract resource requirements for
+   * @return resource requirements, if present, otherwise an empty ResourceRequirements object.
    */
   public static ResourceRequirements getResourceRequirements(final StandardSyncInput input,
                                                              final ActorType actorType,
-                                                             final JobType jobType,
-                                                             @Nullable final ResourceRequirements defaultWorkerRequirements) {
-    final ActorDefinitionResourceRequirements actorDefResourceReqs = getResourceRequirementsForActorType(input, actorType);
-    final ResourceRequirements jobTypeResourceReqs = getResourceRequirementsForJobType(actorDefResourceReqs, jobType).orElse(null);
-    return mergeResourceRequirements(input.getResourceRequirements(), jobTypeResourceReqs, defaultWorkerRequirements);
+                                                             final JobType jobType) {
+    final Optional<ActorDefinitionResourceRequirements> actorDefResourceReqs = getResourceRequirementsForActorType(input, actorType);
+    final ResourceRequirements defaultActorDefResourceReqs = actorDefResourceReqs
+        .map(ActorDefinitionResourceRequirements::getDefault)
+        .orElse(null);
+    final ResourceRequirements jobTypeResourceReqs = actorDefResourceReqs
+        .flatMap(reqs -> getResourceRequirementsForJobType(reqs, jobType))
+        .orElse(null);
+    return mergeResourceRequirements(input.getResourceRequirements(), jobTypeResourceReqs, defaultActorDefResourceReqs);
   }
 
   /**
@@ -46,7 +50,7 @@ public class ResourceRequirementsUtils {
    */
   public static ResourceRequirements mergeResourceRequirements(final ResourceRequirements... resourceReqs) {
     final ResourceRequirements outputReqs = new ResourceRequirements();
-    final List<ResourceRequirements> reversed = new ArrayList<>(List.of(resourceReqs));
+    final List<ResourceRequirements> reversed = new ArrayList<>(Arrays.asList(resourceReqs));
     Collections.reverse(reversed);
 
     for (final ResourceRequirements resourceReq : reversed) {
@@ -72,27 +76,36 @@ public class ResourceRequirementsUtils {
 
   private static Optional<ResourceRequirements> getResourceRequirementsForJobType(final ActorDefinitionResourceRequirements actorDefResourceReqs,
                                                                                   final JobType jobType) {
+    if (actorDefResourceReqs == null) {
+      return Optional.empty();
+    }
+
     final List<ResourceRequirements> jobTypeResourceRequirement = actorDefResourceReqs.getJobSpecific()
         .stream()
         .filter(jobSpecific -> jobSpecific.getJobType() == jobType).map(JobTypeResourceLimit::getResourceRequirements).collect(
             Collectors.toList());
 
     Preconditions.checkArgument(jobTypeResourceRequirement.size() <= 1, "Should only have one resource requirement per job type.");
-    return jobTypeResourceRequirement.isEmpty() ? Optional.empty() : Optional.of(jobTypeResourceRequirement.get(0));
+    return jobTypeResourceRequirement.isEmpty()
+        ? Optional.empty()
+        : Optional.of(jobTypeResourceRequirement.get(0));
   }
 
-  private static ActorDefinitionResourceRequirements getResourceRequirementsForActorType(final StandardSyncInput input, final ActorType actorType) {
+  private static Optional<ActorDefinitionResourceRequirements> getResourceRequirementsForActorType(final StandardSyncInput input,
+                                                                                                   final ActorType actorType) {
+    ActorDefinitionResourceRequirements actorDefinitionResourceRequirements = null;
     switch (actorType) {
       case SOURCE -> {
-        return input.getSourceResourceRequirements();
+        actorDefinitionResourceRequirements = input.getSourceResourceRequirements();
       }
       case DESTINATION -> {
-        return input.getDestinationResourceRequirements();
+        actorDefinitionResourceRequirements = input.getDestinationResourceRequirements();
       }
       default -> {
         throw new IllegalArgumentException("Unrecognized actor type.");
       }
     }
+    return Optional.ofNullable(actorDefinitionResourceRequirements);
   }
 
 }
